--- a/css/_var.scss
+++ b/css/_var.scss
@@ -1,7 +1,11 @@
 $font-size: 14;
-$primary-color: black;
-$secondary-color: rgba(255, 0, 0, 0.774);
+$primary-color: #55619c;
+$secondary-color: #609dd6;
 $text-color: white;
+
 $title-font: 24px;
+$sm-font: 12px;
 $med-font: 18px;
+$lar-font: 32px;
+
 $font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
