--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,7 @@ body {
   #card,
   #info-card {
     display: none;
+    visibility: hidden;
   }
   .more-info-card {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
